--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
   ],
   "routes": [
     {
+      "src": "/socket.io/",
+      "dest": "api/index.py"
+    },
+    {
       "src": "/(.*)",
       "dest": "api/index.py"
     }
